# sz-xray-maps

./: .gitignore  LICENSE  README.md  pyproject.toml
SZ_xray_maps/: __init__.py  manager.py
SZ_xray_maps/cooling_function/: __init__.py  generator.py
SZ_xray_maps/data/: Exposure_vs_Energy.txt  cooling_function_J0459_0.37solar_0.4-10.0keV.npz
SZ_xray_maps/data/cooling_function/: cooling_function_J0459_0.37solar_0.400-0.413keV.npz  cooling_function_J0459_0.37solar_0.413-0.427keV.npz  cooling_function_J0459_0.37solar_0.427-0.441keV.npz  cooling_function_J0459_0.37solar_0.441-0.455keV.npz  cooling_function_J0459_0.37solar_0.455-0.470keV.npz  cooling_function_J0459_0.37solar_0.470-0.485keV.npz  cooling_function_J0459_0.37solar_0.485-0.501keV.npz  cooling_function_J0459_0.37solar_0.501-0.517keV.npz  cooling_function_J0459_0.37solar_0.517-0.534keV.npz  cooling_function_J0459_0.37solar_0.534-0.552keV.npz  cooling_function_J0459_0.37solar_0.552-0.570keV.npz  cooling_function_J0459_0.37solar_0.570-0.589keV.npz  cooling_function_J0459_0.37solar_0.589-0.608keV.npz  cooling_function_J0459_0.37solar_0.608-0.628keV.npz  cooling_function_J0459_0.37solar_0.628-0.648keV.npz  (+85 more)
SZ_xray_maps/instruments/: __init__.py  ecf.py  sz.py  xray.py
SZ_xray_maps/loading/: __init__.py  base.py  fits_handler.py
SZ_xray_maps/plot/: __init__.py  base.py  maps.py  style.py  thesis.mplstyle
SZ_xray_maps/thermo/: __init__.py  base.py  conversions.py  error_propagation.py  leff.py
SZ_xray_maps/utils/: __init__.py  spatial.py  sz_units.py
docs/: tutorial.md
