[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sz-xray-maps"
version = "0.1.0"
description = "Projected SZ + X-ray thermodynamic map analysis for galaxy clusters"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Marre Wijk" },
]
keywords = ["astronomy", "galaxy-clusters", "SZ", "X-ray", "ICM"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=5.3",
    "reproject>=0.11",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["jupyter", "ipykernel"]

[project.urls]
Repository = "https://github.com/marrewijk/sz-xray-maps"

[tool.setuptools.packages.find]
include = ["SZ_xray_maps*"]

[tool.setuptools.package-data]
"SZ_xray_maps" = [
    "data/*.npz",
    "data/*.txt",
    "data/cooling_function/*.npz",
    "plot/*.txt",
    "plot/*.mplstyle",
]
